<resources>
    <string name="app_name">Snack Motivation</string>

    <string name="bar_sun">S</string>
    <string name="bar_mon">M</string>
    <string name="bar_tue">T</string>
    <string name="bar_wed">W</string>
    <string name="bar_thu">T</string>
    <string name="bar_fri">F</string>
    <string name="bar_sat">S</string>

    <string name="settings_default">Settings</string>
    <string name="settings_close">Close</string>

    <string name="preference">prefsforsnack</string>
    <string name="preference_day_key">daylist</string>
    <string name="preference_day_default">1111111</string>

    <string name="txt_noti_pos">Yes</string>
    <string name="txt_noti_neg">No</string>

    <string name="snack_override">Snack Override</string>
    <string name="snacks_allowed">Can I Get Snacks Today?</string>
    <string name="snack_day_text">What days are you allowed to get snacks?</string>

    <string name="days_left"> Days Till Snack</string>
    <string name="day_left"> Day Till Snack</string>
    <string name="no_days">No Days Selected</string>
    <string name="days_0">Snack Day!</string>
</resources>