<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/snacks_allowed"
        android:textSize="@dimen/txt_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_noti_pos"
            android:textSize="@dimen/txt_large" />

        <TextView
            android:id="@+id/txtTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_left"
            android:textSize="@dimen/txt_med" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_sun"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_mon"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_tue"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_wed"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_thu"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_fri"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/btn_day_dimen"
                android:layout_height="@dimen/btn_day_dimen"
                android:background="@drawable/circle_active"
                android:padding="@dimen/btn_day_padding"
                android:text="@string/bar_sat"
                android:textSize="@dimen/btn_day_text"
                app:backgroundTint="@null" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/snack_day_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/btn_day_padding"
            android:layout_marginHorizontal="@dimen/btn_hor_margin"
            android:text="@string/settings_default" />

        <Button
            android:id="@+id/btnSnack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/btn_day_padding"
            android:layout_marginHorizontal="@dimen/btn_hor_margin"
            android:text="@string/snack_override" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>