<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btn1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_sun"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_mon"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_tue"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_wed"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_thu"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_fri"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/btn_day_dimen"
            android:layout_height="@dimen/btn_day_dimen"
            android:background="@drawable/circle_active"
            android:padding="@dimen/btn_day_padding"
            android:text="@string/bar_sat"
            android:textSize="@dimen/btn_day_text"
            app:backgroundTint="@null" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="What days are you allowed to get snacks?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>